--- a/templates/template3.html
+++ b/templates/template3.html
@@ -112,7 +112,7 @@
   <body>
     <div class="resume">
       <header>
-        <h1>{{ data.firstname }} {{ data.lastname }}</h1>
+        <h1>{{ data.name }} {{ data.lastname }}</h1>
         <p>
           {{ data.email }} | <strong>Phone:</strong> {{ data.phone }} |
           <strong>Location:</strong> {{ data.city }}, {{ data.country }} {{
