--- a/templates/template4.html
+++ b/templates/template4.html
@@ -90,7 +90,7 @@
 
   <body>
     <header>
-      <h1>{{ data.firstname }} {{ data.lastname }}</h1>
+      <h1>{{ data.name }} {{ data.lastname }}</h1>
       <div class="contact-info">
         <p>
           <br />
