--- a/templates/template5.html
+++ b/templates/template5.html
@@ -165,7 +165,7 @@
     <div class="container">
       <header class="header">
         <div class="header-main">
-          <h1>{{ data.firstname }} {{ data.lastname }}</h1>
+          <h1>{{ data.name }} {{ data.lastname }}</h1>
           <p class="title">{{ data.current_role }}</p>
         </div>
         <div class="contact-info">
