--- a/templates/template6.html
+++ b/templates/template6.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ data.firstname }} {{ data.lastname }} - Resume</title>
+    <title>{{ data.name }} {{ data.lastname }} - Resume</title>
     <link rel="stylesheet" href="/static/template6.css" />
   </head>
   <style>
@@ -72,7 +72,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <h1>{{ data.firstname }} {{ data.lastname }}</h1>
+        <h1>{{ data.name }} {{ data.lastname }}</h1>
         <div class="contact-info">
           <p>
             {{ data.city }}, {{ data.country }} •
