--- a/templates/signin.html
+++ b/templates/signin.html
@@ -29,7 +29,7 @@
         {% endif %}
         <form action="/signup" method="post">
           <div class="name-group">
-            <input type="text" placeholder="First name" name="firstname" />
+            <input type="text" placeholder="First name" name="name" />
             <input type="text" placeholder="Last name" name="lastname" />
           </div>
           <input type="email" placeholder="Email" name="email" />
