--- a/templates/template1.html
+++ b/templates/template1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ data.firstname }} {{ data.lastname }} - Resume</title>
+    <title>{{ data.name }} {{ data.lastname }} - Resume</title>
     <style>
       body {
         font-family: Arial, sans-serif;
